tests/NormalTests/paczka1/fuzzy1/29089738.err
Error in line 1: Sn18 Sn18 2n,0
Error in line 6: WQGC3 S518 2,2
Error in line 8: WQGC3 A319 52,4
Error in line 15: 1lqqhRYH S518 51,2
Error in line 9: S518 S518 112,2
Error in line 2: V7q07Gx S379 61,1
Error in line 22: V7q07Gx A319 54,2
Error in line 20: WQGC3 S379 86,1
Error in line 25: S518 S802 28,5
